--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,26 +1,48 @@
-.App {
+
+.intro {
   text-align: center;
+  align-items: center;
+  background-color: #000;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.intro p {
+  color: yellow;
+  font-size: 20px;
+
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+
+.quiz {
+  font-size: 20px;
+  text-align: center;
+  align-items: center;
 }
 
-.App-intro {
-  font-size: large;
+.quiz p {
+  font-size: 20px;
+  text-align: center;
+  color: yellow;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.quiz h4 {
+  font-size: 40px;
+  color: yellow;
 }
+
+p#start {
+  width: 16em;
+  font-size: 200%;
+  font-weight: 400;
+  margin: 20% auto;
+  color: lightblue;
+  opacity: 100%;
+  z-index: 1;
+  -webkit-animation: intro 2s ease-out;
+  -moz-animation: intro 2s ease-out;
+  -ms-animation: intro 2s ease-out;
+  -o-animation: intro 2s ease-out;
+  animation: intro 2s ease-out;
+}
+
 
 
